extended new themes to options game

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.2
+Text = UltraStar WorldParty 21.3
 
 [MainText2]
 X = 5
@@ -8973,36 +8973,31 @@ Text = C_BACK
 
 
 [OptionsButtonExit2]
-X = 70
-W = 250
-H = 40
-Tex = Button
+X = 740
+Y = 95
+W = 20
+H = 15
+Tex = ButtonClose
 Color = ColorDark
-DColor = Gray
+DColor = White
 Type = Transparent
 Reflection = 0
 Texts = 1
 
-[OptionsButtonExit2Text]
-X = 45
-Y = 5
-Font = 0
-Size = 30
-Align = 1
-Text = C_BACK
-Color = White
 
 [OptionsSelectSlide]
-Tex = MainBar
+#TODO: Remove Tex, type Color, Dcolor
+Tex = 
 Type = Transparent
+
 TexSBG = SelectBG
 TypeSBG = Transparent
-X = 70
-W = 250
-H = 40
+X = 50
+W = 150
+H = 25
+TextSize = 13
+SBGW = 170
 SkipX = 10
-Color =
-DColor =
 TColor = White
 TDColor = White
 SBGColor = ColorDark
@@ -9012,6 +9007,22 @@ STDColor = GrayDark
 ShowArrows = 1
 OneItemOnly = 1
 
+[OptionsTitleText]
+X = 30
+Y = 30
+Size = 30
+Color = White
+
+[OptionsHelperBG]
+X = 30
+Y = 85
+W = 740
+H = 460
+alpha = 0.45
+Color = White
+Tex = BlackBG
+Type = Transparent
+
 [OptionsGame]
 Texts = 5
 
@@ -9019,80 +9030,97 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsGameStatic1]
-X = 30
-Y = 25
-W = 75
-H = 70
-Color = White
-Tex = Optionsbuttongame
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsGameText1]
-X = 125
-Y = 35
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_GAME
-
-#[OptionsGameText2]
-#X = 50
-#Y = 28
-#Color = ColorLightest
-#Size = 30
-#Text = SING_OPTIONS_GAME_DESC
-
-#[OptionsGameText3]
-#X = 70
-#Y = 85
-#Color = White
-#Size = 30
-#Text = SING_OPTIONS_GAME_WHEREAMI
 
 [OptionsGameSelectSlideLanguage]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_LANGUAGE
 Y = 130
-W = 280
-SBGW = 370
+W = 150
+
+[OptionsGameLanguageDesc]
+Text = SING_OPTIONS_GAME_LANGUAGE_DESC
+X = 420
+Y = 136
+Size = 13
+Color = White
 
 [OptionsGameSelectSongMenu]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SONGMENU
-Y = 175
+Y = 170
+
+[OptionsGameSongMenuDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_SONGMENU_DESC
+Y = 176
 
 [OptionsGameSelectDuets]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_DUETS
-Y = 220
+Y = 210
+
+[OptionsGameDuetsDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_DUETS_DESC
+Y = 216
 
 [OptionsGameSelectTabs]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_TABS
-Y = 265
+Y = 250
+
+[OptionsGameTabsDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_TABS_DESC
+Y = 256
 
 [OptionsGameSelectSlideSorting]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SORTING
-Y = 310
+Y = 290
+
+[OptionsGameSortingDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_SORTING_DESC
+Y = 296
 
 [OptionsGameSelectShowScores]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SHOWSCORES
-Y = 355
+Y = 330
+
+[OptionsGameShowScoresDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_SHOWSCORES_DESC
+Y = 336
 
 [OptionsGameSelectSingScores]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = SING_OPTIONS_GAME_SINGSCORES
-Y = 400
+Y = 370
+
+[OptionsGameSingScoresDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_SINGSCORES_DESC
+Y = 376
 
 [OptionsGameSelectFindUnsetMedley]
 Inheritance = OptionsGameSelectSlideLanguage
 Text = C_MEDLEYC
-Y = 445
+Y = 410
+
+[OptionsGameMedleyCDesc]
+Inheritance = OptionsGameLanguageDesc
+Text = SING_OPTIONS_GAME_MEDLEYC_DESC
+Y = 416
 
 [OptionsGameButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 490
 
 [OptionsGameButtonExitText1]
 Inheritance = OptionsButtonExit2Text
