--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -24,6 +24,7 @@ interface_dialog_backgroundtop = [interface]dialog_backgroundtop.png
 
 Cursor = cursor.svg
 Cursor_Pressed = cursor2.svg
+ButtonClose = buttonclose.svg
 
 /**
  * Icons
