extended themes to graphics options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9013,6 +9013,12 @@ Y = 30
 Size = 30
 Color = White
 
+[OptionsDescText]
+X = 420
+Y = 136
+Size = 13
+Color = White
+
 [OptionsHelperBG]
 X = 30
 Y = 85
@@ -9043,11 +9049,9 @@ Y = 130
 W = 150
 
 [OptionsGameLanguageDesc]
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_LANGUAGE_DESC
-X = 420
 Y = 136
-Size = 13
-Color = White
 
 [OptionsGameSelectSongMenu]
 Inheritance = OptionsGameSelectSlideLanguage
@@ -9055,7 +9059,7 @@ Text = SING_OPTIONS_GAME_SONGMENU
 Y = 170
 
 [OptionsGameSongMenuDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SONGMENU_DESC
 Y = 176
 
@@ -9065,7 +9069,7 @@ Text = SING_OPTIONS_GAME_DUETS
 Y = 210
 
 [OptionsGameDuetsDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_DUETS_DESC
 Y = 216
 
@@ -9075,7 +9079,7 @@ Text = SING_OPTIONS_GAME_TABS
 Y = 250
 
 [OptionsGameTabsDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_TABS_DESC
 Y = 256
 
@@ -9085,7 +9089,7 @@ Text = SING_OPTIONS_GAME_SORTING
 Y = 290
 
 [OptionsGameSortingDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SORTING_DESC
 Y = 296
 
@@ -9095,7 +9099,7 @@ Text = SING_OPTIONS_GAME_SHOWSCORES
 Y = 330
 
 [OptionsGameShowScoresDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SHOWSCORES_DESC
 Y = 336
 
@@ -9105,7 +9109,7 @@ Text = SING_OPTIONS_GAME_SINGSCORES
 Y = 370
 
 [OptionsGameSingScoresDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SINGSCORES_DESC
 Y = 376
 
@@ -9115,15 +9119,13 @@ Text = C_MEDLEYC
 Y = 410
 
 [OptionsGameMedleyCDesc]
-Inheritance = OptionsGameLanguageDesc
+Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_MEDLEYC_DESC
 Y = 416
 
 [OptionsGameButtonExit]
 Inheritance = OptionsButtonExit2
 
-[OptionsGameButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsGraphics]
 Texts = 4
@@ -9132,71 +9134,73 @@ Texts = 4
 Tex = OptionsBG
 
 [OptionsGraphicsStatic1]
-X = 20
-Y = 20
-W = 90
-H = 75
-Color = White
-Tex = Optionsbuttongraphics
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsGraphicsText1]
-X = 120
-Y = 35
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_GRAPHICS
-
-#[OptionsGraphicsText2]
-#X = 65
-#Y = 55
-#Color = ColorLightest
-#Size = 30
-#Text = SING_OPTIONS_GRAPHICS_DESC
-
-#[OptionsGraphicsText3]
-#X = 70
-#Y = 85
-#Color = White
-#Size = 30
-#Text = SING_OPTIONS_GRAPHICS_WHEREAMI
 
 [OptionsGraphicsSelectFullscreen]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_FULLSCREEN
 Y = 130
 
+[OptionsGraphicsFullscreenDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC
+
 [OptionsGraphicsSelectSlideResolution]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_RESOLUTION
-Y = 180
+Y = 170
+
+[OptionsGraphicsResolutionDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_RESOLUTION_DESC
+Y = 176
 
 [OptionsGraphicsSelectScreenFade]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_SCREENFADE
-Y = 230
+Y = 210
+
+[OptionsGraphicsScreenFadeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_SCREENFADE_DESC
+Y = 216
 
 [OptionsGraphicsSelectEffectSing]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_EFFECTSING
-Y = 280
+Y = 250
+
+[OptionsGraphicsEffectSingDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_EFFECTSING_DESC
+Y = 256
 
 [OptionsGraphicsSelectVisualizer]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_VISUALIZER
-Y = 330
+Y = 290
+
+[OptionsGraphicsVisualizerDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_VISUALIZER_DESC
+Y = 296
 
 [OptionsGraphicsSelectMovieSize]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GRAPHICS_MOVIE_SIZE
-Y = 380
+Y = 330
+
+[OptionsGraphicsMovieSizeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC
+Y = 336
 
 [OptionsGraphicsButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 440
-
-[OptionsGraphicsButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsSound]
 Texts = 5
