extended themes to sound options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9202,6 +9202,7 @@ Y = 336
 [OptionsGraphicsButtonExit]
 Inheritance = OptionsButtonExit2
 
+
 [OptionsSound]
 Texts = 5
 
@@ -9209,19 +9210,10 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsSoundStatic1]
-X = 30
-Y = 30
-W = 50
-H = 60
-Color = White
-Tex = Optionsbuttonsound
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsSoundText1]
-X = 110
-Y = 35
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_SOUND
 
 [OptionsSoundSelectVoicePassthrough]
@@ -9229,42 +9221,73 @@ Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_VOICEPASSTHROUGH
 Y = 130
 
+[OptionsSoundVoicePassthroughDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC
+Y = 136
+
 [OptionsSoundSelectBackgroundMusic]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_BACKGROUNDMUSIC
-Y = 175
+Y = 170
+
+[OptionsSoundBackgroundMusicDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC
+Y = 176
 
 [OptionsSoundSelectClickAssist]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_CLICK_ASSIST
-Y = 220
+Y = 210
+
+[OptionsSoundClickAssistDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_CLICK_ASSIST_DESC
+Y = 216
 
 [OptionsSoundSelectBeatClick]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_BEAT_CLICK
-Y = 265
+Y = 250
+
+[OptionsSoundBeatClickDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_BEAT_CLICK_DESC
+Y = 256
 
 [OptionsSoundSelectSlideMusicAutoGain]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_MUSICAUTOGAIN
-Y = 310
+Y = 290
+
+[OptionsSoundMusicAutoGainDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC
+Y = 296
 
 [OptionsSoundSelectSlidePreviewVolume]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_PREVIEWVOLUME
-Y = 355
+Y = 330
 
-[OptionsSoundSelectSlidePreviewFADING]
+[OptionsSoundPreviewVolumeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC
+Y = 336
+
+[OptionsSoundSelectSlidePreviewFading]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_SOUND_PREVIEWFADING
-Y = 400
+Y = 370
+
+[OptionsSoundPreviewFadingDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_SOUND_PREVIEWFADING_DESC
+Y = 376
 
 [OptionsSoundButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 445
-
-[OptionsSoundButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsLyrics]
 Texts = 1
