extended themes to lyrics options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.3
+Text = UltraStar WorldParty 21.4
 
 [MainText2]
 X = 5
@@ -8331,14 +8331,14 @@ Font = 1
 Size = 24
 Align = 0
 Z = 1
-Text=JUKEBOX_SONGOPTIONS_LYRIC
+Text=C_LYRICS
 
 [JukeboxSongOptionsLyricPositionSlide]
 Inheritance = OptionsSelectSlide
 Tex = Transparent
 TexSBG = JukeboxSelect
 TypeSBG = Colorized
-Text = JUKEBOX_SONGOPTIONS_LYRIC_POSITION
+Text = SING_OPTIONS_LYRIC_POSITION
 X = 180
 Y = 120
 W = 200
@@ -8995,7 +8995,7 @@ TypeSBG = Transparent
 X = 50
 W = 150
 H = 25
-TextSize = 13
+TextSize = 14
 SBGW = 170
 SkipX = 10
 TColor = White
@@ -9016,8 +9016,8 @@ Color = White
 [OptionsDescText]
 X = 420
 Y = 136
-Size = 13
-Color = White
+Size = 12
+Color = GrayLight
 
 [OptionsHelperBG]
 X = 30
@@ -9046,82 +9046,81 @@ Text = C_GAME
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_LANGUAGE
 Y = 130
-W = 150
 
 [OptionsGameLanguageDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_LANGUAGE_DESC
-Y = 136
+Y = 137
 
 [OptionsGameSelectSongMenu]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_SONGMENU
 Y = 170
 
 [OptionsGameSongMenuDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SONGMENU_DESC
-Y = 176
+Y = 177
 
 [OptionsGameSelectDuets]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_DUETS
 Y = 210
 
 [OptionsGameDuetsDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_DUETS_DESC
-Y = 216
+Y = 217
 
 [OptionsGameSelectTabs]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_TABS
 Y = 250
 
 [OptionsGameTabsDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_TABS_DESC
-Y = 256
+Y = 257
 
 [OptionsGameSelectSlideSorting]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_SORTING
 Y = 290
 
 [OptionsGameSortingDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SORTING_DESC
-Y = 296
+Y = 297
 
 [OptionsGameSelectShowScores]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_SHOWSCORES
 Y = 330
 
 [OptionsGameShowScoresDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SHOWSCORES_DESC
-Y = 336
+Y = 337
 
 [OptionsGameSelectSingScores]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_GAME_SINGSCORES
 Y = 370
 
 [OptionsGameSingScoresDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_SINGSCORES_DESC
-Y = 376
+Y = 377
 
 [OptionsGameSelectFindUnsetMedley]
-Inheritance = OptionsGameSelectSlideLanguage
+Inheritance = OptionsSelectSlide
 Text = C_MEDLEYC
 Y = 410
 
 [OptionsGameMedleyCDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GAME_MEDLEYC_DESC
-Y = 416
+Y = 417
 
 [OptionsGameButtonExit]
 Inheritance = OptionsButtonExit2
@@ -9157,7 +9156,7 @@ Y = 170
 [OptionsGraphicsResolutionDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GRAPHICS_RESOLUTION_DESC
-Y = 176
+Y = 177
 
 [OptionsGraphicsSelectScreenFade]
 Inheritance = OptionsSelectSlide
@@ -9167,7 +9166,7 @@ Y = 210
 [OptionsGraphicsScreenFadeDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GRAPHICS_SCREENFADE_DESC
-Y = 216
+Y = 217
 
 [OptionsGraphicsSelectEffectSing]
 Inheritance = OptionsSelectSlide
@@ -9177,7 +9176,7 @@ Y = 250
 [OptionsGraphicsEffectSingDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GRAPHICS_EFFECTSING_DESC
-Y = 256
+Y = 257
 
 [OptionsGraphicsSelectVisualizer]
 Inheritance = OptionsSelectSlide
@@ -9187,7 +9186,7 @@ Y = 290
 [OptionsGraphicsVisualizerDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GRAPHICS_VISUALIZER_DESC
-Y = 296
+Y = 297
 
 [OptionsGraphicsSelectMovieSize]
 Inheritance = OptionsSelectSlide
@@ -9197,7 +9196,7 @@ Y = 330
 [OptionsGraphicsMovieSizeDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC
-Y = 336
+Y = 337
 
 [OptionsGraphicsButtonExit]
 Inheritance = OptionsButtonExit2
@@ -9224,7 +9223,7 @@ Y = 130
 [OptionsSoundVoicePassthroughDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC
-Y = 136
+Y = 137
 
 [OptionsSoundSelectBackgroundMusic]
 Inheritance = OptionsSelectSlide
@@ -9234,7 +9233,7 @@ Y = 170
 [OptionsSoundBackgroundMusicDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC
-Y = 176
+Y = 177
 
 [OptionsSoundSelectClickAssist]
 Inheritance = OptionsSelectSlide
@@ -9244,7 +9243,7 @@ Y = 210
 [OptionsSoundClickAssistDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_CLICK_ASSIST_DESC
-Y = 216
+Y = 217
 
 [OptionsSoundSelectBeatClick]
 Inheritance = OptionsSelectSlide
@@ -9254,7 +9253,7 @@ Y = 250
 [OptionsSoundBeatClickDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_BEAT_CLICK_DESC
-Y = 256
+Y = 257
 
 [OptionsSoundSelectSlideMusicAutoGain]
 Inheritance = OptionsSelectSlide
@@ -9264,7 +9263,7 @@ Y = 290
 [OptionsSoundMusicAutoGainDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC
-Y = 296
+Y = 297
 
 [OptionsSoundSelectSlidePreviewVolume]
 Inheritance = OptionsSelectSlide
@@ -9274,7 +9273,7 @@ Y = 330
 [OptionsSoundPreviewVolumeDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC
-Y = 336
+Y = 337
 
 [OptionsSoundSelectSlidePreviewFading]
 Inheritance = OptionsSelectSlide
@@ -9284,7 +9283,7 @@ Y = 370
 [OptionsSoundPreviewFadingDesc]
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_SOUND_PREVIEWFADING_DESC
-Y = 376
+Y = 377
 
 [OptionsSoundButtonExit]
 Inheritance = OptionsButtonExit2
@@ -9296,99 +9295,125 @@ Texts = 1
 Tex = OptionsBG
 
 [OptionsLyricsStatic1]
-X = 30
-Y = 30
-W = 60
-H = 65
-Color = White
-Tex = Optionsbuttonlyrics
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsLyricsText1]
-X = 100
-Y = 35
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_LYRICS
-
-[OptionsLyricsText5]
-X = 440
-Y = 548
-Z = 0.5
-Color = White
-Size = 24
-Text = SING_LEGEND_ESC
-Reflection = 1
-ReflectionSpacing = 20
 
 [OptionsLyricsUpperBar]
 X = 250
-Y = 90
+Y = 480
 W = 300
-H = 40
+H = 22
 IndicatorYOffset = 3
 
 [OptionsLyricsLowerBar]
 Inheritance = OptionsLyricsUpperBar
-Y = 120
+Y = 500
 
 [OptionsLyricsSelectMode]
 Inheritance = OptionsSelectSlide
 Text = PARTY_SELECT_MODE
-Y = 170
+Y = 130
 ShowArrows = 0
 OneItemOnly = 0
+
+[OptionsLyricsModeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_MODE_DESC
 
 [OptionsLyricsSelectModeProperty]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_NOTELINES
-Y = 215
+Y = 170
+
+[OptionsLyricsStavesDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_STAVES_DESC
+Y = 177
+
+; -- TODO: Enable position desc -- 
+
+;[OptionsLyricsPositionDesc]
+;Inheritance = OptionsDescText
+;Text = SING_OPTIONS_LYRICS_POSITION_DESC
+;Y = 177
 
 [OptionsLyricsSelectFont]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_FONT
-Y = 260
+Y = 210
+
+[OptionsLyricsFontDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_FONT_DESC
+Y = 217
 
 [OptionsLyricsSelectEffect]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_EFFECT
-Y = 305
+Y = 250
+
+[OptionsLyricsEffectDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_EFFECT_DESC
+Y = 257
 
 [OptionsLyricsSelectTransparency]
 Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
-Y = 350
+Text = SING_OPTIONS_LYRICS_ALPHA
+Y = 290
+
+[OptionsLyricsTransparencyDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_TRANSPARENCY_DESC
+Y = 297
 
 [OptionsLyricsSelectLines]
 Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_LINE
-Y = 395
+Text = SING_OPTIONS_LYRICS_LINE
+Y = 330
 ShowArrows = 0
 OneItemOnly = 0
+
+[OptionsLyricsLineDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_LINE_DESC
+Y = 337
 
 [OptionsLyricsSelectProperty]
 Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
-Y = 440
+Text = SING_OPTIONS_LYRICS_PROPERTY
+Y = 370
 ShowArrows = 0
 OneItemOnly = 0
 
+[OptionsLyricsPropertyDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_PROPERTY_DESC
+Y = 377
+
 [OptionsLyricsSelectColor]
 Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_COLOR
-Y = 485
-SBGW = 250
+Text = C_COLOR
+Y = 410
+
+[OptionsLyricsColorDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_LYRICS_COLOR_DESC
+Y = 417
 
 [OptionsLyricsSelectR]
 Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
+Text = C_COLOR_RED
 TexSBG = Picker
-X = 580
+X = 50
 Y = 485
 W = 75
 H = 12
 SkipX = 1
-TextSize = 14
+TextSize = 12
 SBGW = 75
 SBGColor = LightRed
 SBGDColor = DarkRed
@@ -9396,21 +9421,21 @@ ShowArrows = 0
 
 [OptionsLyricsSelectG]
 Inheritance = OptionsLyricsSelectR
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
+Text = C_COLOR_GREEN
 Y = 498
 SBGColor = LightGreen
 SBGDColor = DarkGreen
 
 [OptionsLyricsSelectB]
 Inheritance = OptionsLyricsSelectR
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
+Text = C_COLOR_BLUE
 Y = 511
 SBGColor = LightBlue
 SBGDColor = DarkBlue
 
 [OptionsLyricsPointerR]
 Inheritance = JukeboxSongOptionsLyricPointerR
-X = 580
+X = 50
 Y = 484
 H = 14
 
@@ -9423,9 +9448,10 @@ Inheritance = OptionsLyricsPointerR
 Y = 510
 
 [OptionsLyricsColor]
-X = 331
-Y = 525
-W = 400
+Inheritance = OptionsSelectSlide
+X = 210
+Y = 440
+W = 170
 H = 5
 Z = 1
 Tex = Picker
@@ -9433,10 +9459,6 @@ Type = Transparent
 
 [OptionsLyricsButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 545
-
-[OptionsLyricsButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsThemes]
 Texts = 5
