--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,8 +8,8 @@ description: |
   It allows up to six players to sing along with music using microphones in order to score points, depending on the pitch of the voice and the rhythm of singing.
 
   ABOUT US
-  This game is developed by the UltraStar España team. You can found in our website https://ultrastar-es.org thousand of songs, info and help about it. 
-  If you want follow the develop of the next version please visit our GitHub https://github.com/ultrastares/ultrastar-worldparty
+  This game is developed by the UltraStar España team. You can find in our website https://ultrastar-es.org thousand of songs, info and help about it. 
+  If you want to follow the development of the next version please visit our GitHub https://github.com/ultrastares/ultrastar-worldparty
   
   CONFIGURATION
   You can found in the snap folder ~/snap/ultrastar-worldparty/current/.ultrastar-worldparty the config.ini or the default song folder or the playlist folder.
@@ -22,9 +22,9 @@ description: |
    - The network to connect to UltraStar España to download or send scores.
 
   ERRORS
-  If you found a problem and receive an error message with extrange numbers and letters, you must use the debug executable and repeat the steps to reproduce it and get an human readable message.
+  If you find a problem and receive an error message with extrange numbers and letters, you must use the debug executable and repeat the steps to reproduce it and get an human readable message.
   To do it put in your terminal: snap run ultrastar-worldparty-debug. 
-  Later of this please report the error in our GitHub https://github.com/ultrastares/ultrastar-worldparty or in the forum of our website https://ultrastar-es.org/foro 
+  After this please report the error in our GitHub https://github.com/ultrastares/ultrastar-worldparty or in the forum of our website https://ultrastar-es.org/foro 
 
   SUPPORT
   If you have a support question please search your question in our forum https://ultrastar-es.org/foro or create a new thread if you can't found it.
