--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@ description: |
   If you want to follow the development of the next version please visit our GitHub https://github.com/ultrastares/ultrastar-worldparty
   
   CONFIGURATION
-  You can found in the snap folder ~/snap/ultrastar-worldparty/current/.ultrastar-worldparty the config.ini or the default song folder or the playlist folder.
+  You can find in the snap folder ~/snap/ultrastar-worldparty/current/.ultrastar-worldparty the config.ini or the default song folder or the playlist folder.
   To add another song folder use the SongDir1 option in the config.ini, all paths of your home or your system default mount folders (i.e. /media in *ubuntu distros) are allowed.
   
   PERMISSIONS
@@ -27,7 +27,7 @@ description: |
   After this please report the error in our GitHub https://github.com/ultrastares/ultrastar-worldparty or in the forum of our website https://ultrastar-es.org/foro 
 
   SUPPORT
-  If you have a support question please search your question in our forum https://ultrastar-es.org/foro or create a new thread if you can't found it.
+  If you have a support question please search your question in our forum https://ultrastar-es.org/foro or create a new thread if you can't find it.
   It's a Spanish forum and if you know our language is perfect, but we can answer in English and some collaborators can do it in French but the others are preferable.
 grade: stable
 confinement: strict
