--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,7 +27,7 @@ description: |
   After this please report the error in our GitHub https://github.com/ultrastares/ultrastar-worldparty or in the forum of our website https://ultrastar-es.org/foro 
 
   SUPPORT
-  If you have a support question please search your question in our forum https://ultrastar-es.org/foro or create a new thread if you can't find it.
+  If you have a support question please search it in our forum https://ultrastar-es.org/foro or create a new thread if you can't find it.
   It's a Spanish forum and if you know our language is perfect, but we can answer in English and some collaborators can do it in French but the others are preferable.
 grade: stable
 confinement: strict
