extended themes to themes options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9467,52 +9467,43 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsThemesStatic1]
-X = 30
-Y = 30
-W = 85
-H = 75
-Color = White
-Tex = Optionsbuttondesign
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsThemesText1]
-X = 120
-Y = 40
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_THEMES
-
-[OptionsThemesText5]
-X = 440
-Y = 548
-Z = 0.5
-Color = White
-Size = 24
-Reflection = 1
-ReflectionSpacing = 20
-Text = SING_LEGEND_ESC
 
 [OptionsThemesSelectTheme]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_THEMES_THEME
 Y = 130
 
+[OptionsThemesThemeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_THEMES_THEME_DESC
+
 [OptionsThemesSelectSkin]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_THEMES_SKIN
-Y = 180
+Y = 170
+
+[OptionsThemesSkinDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_THEMES_SKIN_DESC
+Y = 177
 
 [OptionsThemesSelectColor]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_THEMES_COLOR
-Y = 230
+Y = 210
+
+[OptionsThemesColorDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_THEMES_COLOR_DESC
+Y = 217
 
 [OptionsThemesButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 290
-
-[OptionsThemesButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsMicrophones]
 Texts = 5
