extended themes to microphone options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9512,19 +9512,10 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsMicrophonesStatic1]
-X = 30
-Y = 30
-W = 70
-H = 65
-Color = White
-Tex = Optionsbuttonmicrophones
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsMicrophonesText1]
-X = 110
-Y = 40
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_MICROPHONES
 
 [OptionsMicrophonesSelectSlideCard]
@@ -9532,34 +9523,52 @@ Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_MICROPHONES_CARD
 Y = 130
 
+[OptionsMicrophonesSoundCardDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC
+
 [OptionsMicrophonesSelectSlideInput]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_MICROPHONES_INPUT
-Y = 180
+Y = 170
 
-[OptionsMicrophonesSelectSlideChannel]
-Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_MICROPHONES_CHANNEL
-Y = 230
-ShowArrows = 0
-OneItemOnly = 0
+[OptionsMicrophonesInputDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_MICROPHONES_INPUT_DESC
+Y = 177
 
 [OptionsMicrophonesSelectThreshold]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_MICROPHONES_THRESHOLD
-Y = 367
+Y = 210
+
+[OptionsMicrophonesThresholdDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_MICROPHONES_THRESHOLD_DESC
+Y = 217
 
 [OptionsMicrophonesSelectMicBoost]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_MICROPHONES_MIC_BOOST
-Y = 417
+Y = 250
+
+[OptionsMicrophonesMicBoostDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_MICROPHONES_MICBOOST_DESC
+Y = 257
+
+[OptionsMicrophonesSelectSlideChannel]
+Inheritance = OptionsSelectSlide
+Y = 295
+;SBGW = 400
+
+[OptionsMicrophonesChannelDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_MICROPHONES_CHANNEL_DESC
+Y = 302
 
 [OptionsMicrophonesButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 470
-
-[OptionsMicrophonesButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsAdvanced]
 Texts = 5
