extended themes to advanced options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.4
+Text = UltraStar WorldParty 21.5
 
 [MainText2]
 X = 5
@@ -9577,19 +9577,10 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsAdvancedStatic1]
-X = 30
-Y = 30
-W = 57
-H = 67
-Color = White
-Tex = Optionsbuttonadvanced
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsAdvancedText1]
-X = 100
-Y = 40
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_ADVANCED
 
 [OptionsAdvancedSelectDebug]
@@ -9597,37 +9588,62 @@ Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_ADVANCED_DEBUG
 Y = 130
 
+[OptionsAdvancedDebugDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_DEBUG_DESC
+
 [OptionsAdvancedSelectOscilloscope]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_ADVANCED_OSCILLOSCOPE
-Y = 180
+Y = 170
+
+[OptionsAdvancedOscilloscopeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC
+Y = 177
 
 [OptionsAdvancedSelectSlideOnSongClick]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_ADVANCED_ONSONGCLICK
-Y = 230
+Y = 210
 
-[OptionsAdvancedSelectAskbeforeDel]
+[OptionsAdvancedOnSongClickDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC
+Y = 217
+
+[OptionsAdvancedSelectAskBeforeExit]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_ADVANCED_ASKBEFOREDEL
-Y = 280
+Text = SING_OPTIONS_ADVANCED_ASKBEFOREEXIT
+Y = 250
+
+[OptionsAdvancedAskBeforeExitDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC
+Y = 257
 
 [OptionsAdvancedSelectPartyPopup]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_ADVANCED_PARTYPOPUP
-Y = 330
+Y = 290
+
+[OptionsAdvancedPartyPopupDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC
+Y = 297
 
 [OptionsAdvancedSelectTopScores]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_ADVANCED_TOPSCORES
-Y = 380
+Y = 330
+
+[OptionsAdvancedTopScoresDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_TOPSCORES_DESC
+Y = 337
 
 [OptionsAdvancedButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 440
-
-[OptionsAdvancedButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsNetwork]
 Texts = 5
