extended themes to network options

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 21.5
+Text = UltraStar WorldParty 21.7
 
 [MainText2]
 X = 5
@@ -9652,19 +9652,10 @@ Texts = 5
 Tex = OptionsBG
 
 [OptionsNetworkStatic1]
-X = 30
-Y = 30
-W = 55
-H = 67
-Color = White
-Tex = Optionsbuttonnetwork
-Type = Transparent
+Inheritance = OptionsHelperBG
 
 [OptionsNetworkText1]
-X = 100
-Y = 40
-Color = White
-Size = 45
+Inheritance = OptionsTitleText
 Text = C_INTERNET
 
 [OptionsNetworkTextInsertUser]
@@ -9674,77 +9665,122 @@ W = 600
 Z = 1
 Align = 1
 Color = White
-Size = 32
-
-[OptionsNetworkSelectSlide]
-Inheritance = OptionsSelectSlide
-H = 35
-
-[OptionsNetworkSelectWebsite]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_WEBSITE
-Y = 130
-
-[OptionsNetworkSelectUsername]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_USERNAME
-Y = 175
-
-[OptionsNetworkSelectSendSaveName]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME
-Y = 220
-
-[OptionsNetworkSelectAutoMode]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_AUTO_MODE
-Y = 265
-
-[OptionsNetworkSelectAutoPlayer]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_AUTO_PLAYER
-Y = 310
-
-[OptionsNetworkSelectAutoScoreEasy]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_AUTO_SCORE_EASY
-Y = 355
-
-[OptionsNetworkSelectAutoScoreMedium]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM
-Y = 400
-
-[OptionsNetworkSelectAutoScoreHard]
-Inheritance = OptionsNetworkSelectSlide
-Text = SING_OPTIONS_NETWORK_AUTO_SCORE_HARD
-Y = 445
+Size = 30
 
 [OptionsNetworkButtonInsert]
-X = 550
-Y = 490
-W = 180
-H = 40
-Tex = MainBar
+X = 670
+Y = 430
+W = 35
+H = 52
+Tex = Optionsbuttoninsert
 Color = ColorDark
-DColor = Gray
+DColor = blue
 Type = Transparent
 Texts = 1
 
 [OptionsNetworkButtonInsertText1]
-X = 90
-Y = 5
+X = 18
+Y = 65
 Align = 1
 Color = White
-Size = 30
-Text = SING_OPTIONS_NETWORK_LEGEND_INSERT
+Size = 13
+Text = C_INSERT_USER
+
+[OptionsNetworkButtonDelete]
+X = 590
+Y = 430
+W = 35
+H = 52
+Tex = Optionsbuttondelete
+Color = ColorDark
+DColor = red
+Type = Transparent
+Texts = 1
+
+[OptionsNetworkButtonDeleteText1]
+X = 18
+Y = 65
+Align = 1
+Color = White
+Size = 13
+Text = C_DELETE_USER
+
+#[OptionsNetworkSelectSlide]
+#Inheritance = OptionsSelectSlide
+#Y = 130
+
+
+[OptionsNetworkSelectWebsite]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_WEBSITE
+Y = 130
+
+[OptionsNetworkWebsiteDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_WEBSITE_DESC
+
+[OptionsNetworkSelectUsername]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_USERNAME
+Y = 170
+
+[OptionsNetworkUsernameDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_USERNAME_DESC
+Y = 177
+
+[OptionsNetworkSelectSendSaveName]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME
+Y = 210
+
+[OptionsNetworkSendSaveNameDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME_DESC
+Y = 217
+
+[OptionsNetworkSelectAutoMode]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_AUTO_MODE
+Y = 250
+
+[OptionsNetworkAutoModeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_AUTO_MODE_DESC
+Y = 257
+
+[OptionsNetworkSelectAutoPlayer]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_AUTO_PLAYER
+Y = 290
+
+[OptionsNetworkAutoPlayerDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_AUTO_PLAYER_DESC
+Y = 297
+
+[OptionsNetworkSelectAutoScoreEasy]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_AUTO_SCORE_EASY
+Y = 330
+
+[OptionsNetworkAutoScoreEasyDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_NETWORK_AUTO_SCORE_EASY_DESC
+Y = 337
+
+[OptionsNetworkSelectAutoScoreMedium]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM
+Y = 370
+
+[OptionsNetworkSelectAutoScoreHard]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_NETWORK_AUTO_SCORE_HARD
+Y = 410
 
 [OptionsNetworkButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 490
-
-[OptionsNetworkButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [OptionsWebcam]
 Texts = 5
