--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -164,6 +164,9 @@ Optionsbuttonwebcam      = [Options]buttonwebcam.png
 Optionsbuttonprofiles    = [Options]buttonprofiles.png
 Optionsbuttonback        = [Options]buttonback.png
 
+Optionsbuttoninsert      = [Options]buttoninsert.png
+Optionsbuttondelete      = [Options]buttondelete.png
+
 # # # M A I N   P A R T Y # # #
 TournamentButton  =[tournament]trophy.png
 
